--- a/themes/TKLtheme/_config.yml
+++ b/themes/TKLtheme/_config.yml
@@ -30,7 +30,7 @@ works:
 duoshuo: duoshuo_name
 
 # Miscellaneous
-github: https://github.com/redqueeneffect
+github: https://github.com/lunarspacestudio
 twitter:
 facebook:
 google:
