再再再改样式

--- a/themes/TKLtheme/_config.yml
+++ b/themes/TKLtheme/_config.yml
@@ -2,8 +2,8 @@
 cover: /img/codered2.jpg
 logo: /img/doge.gif
 top_saying:
-- title: LunarSpaceStudio
-- content: 睦月空间站开发者博客
+- title: Lunar Space Studio
+- content: 睦月空间站
 bottom_saying: <del>每一个不曾起舞的日子都是对生命的辜负。</del><br>辜负生命不如跳舞 ——边境拾遗
 # Content
 excerpt_link: 更多
